hotfix: text input bug on safari, increase max filesize for image uploads

--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -29,6 +29,10 @@ body {
   }
 }
 
+input {
+  user-select: text;
+}
+
 img {
   user-drag: none;
   user-select: none;
